--- a/pages/story_2.html
+++ b/pages/story_2.html
@@ -16,12 +16,12 @@
 			<br><br>McGraw is so ready for his trip, but his plans were delayed for a couple of days since his neighbors got stranded and required assistance in taking care of their pets for a bit. The sitter was not willing to do more. Feeling bad for them and loving those two gremlins, he agrees.
 			<br><br>The departure day approached, and Old McGraw was reviewing his checklist, ensuring he had everything he needed. At this point, McGraw was an expert. 
 			<br><br>"Tickets? Check. Passport? Check. Sandals and sunscreen? Double check,” he muttered to himself with a satisfied smirk. He was excited, soon he’d be soaking in the warm Bahamian sun, far away from the snow and cold he detested.
-            		<br><br>McGraw mentally pictured himself lazily lying on the beach. But outta nowhere, a loud <em>thud</em> interrupted his thoughts. He approaches his window and looks over the edge of the porch to see…a reindeer, no bigger than a large dog like his neighbor’s, pawing at the snow. Its antlers were uneven, one of them chipped, and its big, sorrowful eyes locked onto his.
+            		<br><br>McGraw mentally pictured himself lazily lying on the beach, when outta nowhere, a loud <em>thud</em> interrupted his thoughts. He approached his window and looked over the edge of the porch to see… a reindeer, no bigger than a large dog like his neighbor’s, pawing at the snow. Its antlers were uneven, one of them chipped, and its big, sorrowful eyes locked onto his.
             		<br><br>“What in the w-?” McGraw frowned, setting his checklist down. He walked outside, letting the door shut behind him. “Shoo! Get outta here!”
             		<br><br>The reindeer didn’t budge. Instead, it let out a low grunt and climbed awkwardly up the porch steps. The reindeer seemed desperate and as if it had decided McGraw, was its last hope.
 			<br><br>“Oh, no you don’t. I’m not getting mixed up in whatever mess you’ve got going on,” McGraw grumbled. “I’ve got a plane to catch tomorrow. Bahamas, sunshine, no snow. You hear me?”
 			<br><br>The reindeer tilted its head, as if unimpressed by his protest. Then, it lay down on the porch with a dramatic sigh, “Bgrrr.”
-			<br><br>“Oh, for crying out loud.” McGraw rubbed his temples. “Fine. You can stay here tonight. But come morning, I’m dropping you off at the animal shelter. Deal?”
+			<br><br>“Oh, for crying out loud.” McGraw rubbed his temples. “Fine. You can stay here tonight. But come morning, I’m dropping you off at the animal shelter.”
 			<br><br>The reindeer blinked at him, its nose twitching, and McGraw could’ve sworn it almost smiled as if he understood (like Kristoff).
 			<br><br>The next day, as McGraw loaded his luggage into the truck, the reindeer followed after him, patting its nose against his arm.
 			<br><br>“Nope, you’re not coming with me,” McGraw said firmly.
