--- a/pages/story_2.html
+++ b/pages/story_2.html
@@ -21,7 +21,7 @@
             		<br><br>The reindeer didn’t budge. Instead, it let out a low grunt and climbed awkwardly up the porch steps. The reindeer seemed desperate and as if it had decided McGraw, was its last hope.
 			<br><br>“Oh, no you don’t. I’m not getting mixed up in whatever mess you’ve got going on,” McGraw grumbled. “I’ve got a plane to catch tomorrow. Bahamas, sunshine, no snow. You hear me?”
 			<br><br>The reindeer tilted its head, as if unimpressed by his protest. Then, it lay down on the porch with a dramatic sigh, “Bgrrr.”
-			<br><br>“Oh, for crying out loud.” McGraw rubbed his temples. “Fine. You can stay here tonight. But come morning, I’m dropping you off at the animal shelter.”
+			<br><br>“Oh, for crying out loud.” McGraw rubbed his temples. “Fine. You can stay here tonight. But come morning, I’m dropping you off at the animal shelter or something.”
 			<br><br>The reindeer blinked at him, its nose twitching, and McGraw could’ve sworn it almost smiled as if he understood (like Kristoff).
 			<br><br>The next day, as McGraw loaded his luggage into the truck, the reindeer followed after him, patting its nose against his arm.
 			<br><br>“Nope, you’re not coming with me,” McGraw said firmly.
