--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -12,9 +12,9 @@
     <h1></h1>
 	<div class="container">
         <p>
-            Every Christmas, the Navarro get excited for one of grandma's special culinary dishes. She's kept all the recipes from everyone. 
+            Every Christmas, the Navarros get excited about one of Grandma's special culinary dishes. She keeps all the recipes from everyone. 
 
-But grandma's not been feeling great, so she couldn't make any dish. So she senddsds them on a fun quest to get the recipe for one dish in paasarticular, Amy's favorite. 
+But grandma's not feeling great so she couldn't make any dish. So she sends them on a fun quest to get the recipe for one dish, in particular, Amy's favorite. 
         </p>
     </div>
 </body>
