--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <p style="color: #fff;" class="hbd-chatbox"> 
-            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life to the fullest, and just being happy. Seeing you happy makes me so happy! I just want you to be happy... 
+            Hey beautiful, Merry Christmas! I hope you have been getting sleep, living life, and being happy. Knowing you are happy makes me so happy! It's been a rough couple of months but we can take a break today... 
         </p>
         <p style="visibility:hidden" class="fake-btn">Send</p>
     </div>
