--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -12,9 +12,31 @@
     <h1></h1>
 	<div class="container">
         <p>
-            Every Christmas, the Navarros get excited about one of Grandma's special culinary dishes. She keeps all the recipes from everyone. 
-
-But grandma's not feeling great so she couldn't make any dish. So she sends them on a fun quest to get the recipe for one dish, in particular, Amy's favorite. 
+            <br>Every Christmas, the Navarros get excited about one of Grandma's special culinary dishes. Grandma has kept all the recipes from everyone for decades. Today, however, she's decided she is going to share one of her recipes. 
+			<br><br>But Grandma is not going to make it easy. Nuh-uh. She wants to make it a game for all of her kids and grandkids to enjoy. 
+			<br><br>"Listen up, Navarros!" Grandma announces, her voice cheerful. "For years, you’ve all begged me to share my famous tamale pie recipe. Well, today’s the day... sort of."
+			<br><br>Gasps echoed through the room, followed by cheers. Amy, the youngest of 3, feels her heart race with excitement. She’d always dreamed of making Grandma’s tamale pie, not just for Christmas but for cozy dinners all year round. Antonio heard pie and got up immediately, he loves food. And Sophia just wanted to do something fun.  
+			<br><br>“But," Grandma continued, "I’m not just going to hand it over. Where’s the fun in that? Instead, you’re going on a treasure hunt!"
+			<br><br>The room exploded as Grandma handed Amy an old parchment map, edges crinkled and decorated with tiny sketches of the house and yard. 
+			Amy read aloud the first clue written in Grandma’s perfect handwriting: <br>“The first clue is in a place that’s always warm… like the hugs you give me.”<br>
+			Amy grinned. "The fireplace!" 
+			<br><br>They all rushed into the living room hearth. Tucked beside a jar of cinnamon sticks on the fireplace was a small envelope. Amy opened it, but before she could read the next clue, her cousin Leo grabbed it playfully. 
+			<br><br>"Not so fast, Amy," he teased. "Let me read this one!"
+			<br><br>He unfolded the paper and read in a dramatic deep voice: <br>“Grandma always says, ‘Love is the secret ingredient.’ But where do we keep all the ingredients?”<br>
+			<br><br>“The pantry!” Sophia exclaimed, tugging Leo’s arm as they raced toward the kitchen. When they reached the pantry, they found a tin box tied with a purple ribbon. Inside was a miniature puzzle shaped like a bowl of tamale filling, each piece numbered. 
+			<br><br>“Looks like we have to put this together first,” said Amy. 
+			<br><br>The group crowded around the kitchen counter. "The pieces are so tiny!" Antony complained.
+			<br><br>Laughter filled the room as they worked together to assemble the tiny puzzle. They each grabbed a few pieces, placed fitting pieces together, some even placed them up to the light to see them better squinting. 
+			<br><br>When they finally finished, the picture revealed the next clue: <br>“To hear the next hint, sing me something sweet. Start with the one about Rudolph!”<br> 
+			"Grandma wants us to carol!" Leo said, beaming. The family gathered around the piano, where Aunt Maria took the lead on the keys. Everyone joined in, belting out <em>Rudolph the Red-Nosed Reindeer.</em> Grandma appeared, clapping her hands. 
+			<br><br>“Well done!” she said. “Your next clue is hidden under something from your very first Christmas together.” 
+			<br><br>Amy frowned and shrugged, stumped, until her little brother, Max, whispered, "What about the Christmas ornament with the baby picture on it?" 
+			<br><br>Together, they raced to the tree, hunting through the branches until they found a golden ornament with a picture of Amy and her cousins as toddlers. Inside its hollow base, they found another envelope. 
+			<br><br>“The final clue: <br>To make this dish just right, don’t forget the spice. Find it where the stars are bright, twinkling in the night.”<br>
+			Amy and her cousins rushed outside into the chilly night. The backyard sparkled. It was magical, filled with fairy lights. They looked beneath the large oak tree and spotted a small tin box tied with a red ribbon. Inside was a handwritten recipe card, decorated with tiny hearts and flowers. Amy held it close to her heart, her eyes sparkling with gratitude. 
+			She looked over at her Grandma, “Thank you, Grandma,” she said, her voice soft. 
+			<br><br>Grandma chuckled. “Now, don’t think I gave you the whole recipe. There’s still one secret I’ll keep to myself. You’ll have to come back next Christmas to learn the rest!” 
+			<br><br>They all laughed. As the family gathered around to help Amy prepare the dish, the air was filled with the clinking of pans, bursts of laughter, and the warmth of togetherness. Amy realized that while the recipe was special, the treasure wasn’t just in the dish, it was in the memories they’d made along the way.
         </p>
     </div>
 </body>
