--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="story.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>On a Quest</h1>
 	<div class="container">
         <p>
             <br>Every Christmas, the Navarros get excited about one of Grandma's special culinary dishes. Grandma has kept all the recipes from everyone for decades. Today, however, she's decided she is going to share one of her recipes. 
