--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -15,7 +15,7 @@
             <br>Every Christmas, the Navarros get excited about one of Grandma's special culinary dishes. Grandma has kept all the recipes from everyone for decades. Today, however, she's decided she is going to share one of her recipes. 
 			<br><br>But Grandma is not going to make it easy. Nuh-uh. She wants to make it a game for all of her kids and grandkids to enjoy. 
 			<br><br>"Listen up, Navarros!" Grandma announces, her voice cheerful. "For years, you’ve all begged me to share my famous tamale pie recipe. Well, today’s the day... sort of."
-			<br><br>Gasps echoed through the room, followed by cheers. Amy, the youngest of 3, feels her heart race with excitement. She’d always dreamed of making Grandma’s tamale pie, not just for Christmas but for cozy dinners all year round. Antonio heard pie and got up immediately, he loves food. And Sophia just wanted to do something fun.  
+			<br><br>Gasps echoed through the room, followed by cheers. Amy, the youngest of three, feels her heart race with excitement. She’d always dreamed of making Grandma’s tamale pie, not just for Christmas but for cozy dinners all year round. Antonio heard pie and got up immediately, he loves food. And Sophia just wanted to do something fun.  
 			<br><br>“But," Grandma continued, "I’m not just going to hand it over. Where’s the fun in that? Instead, you’re going on a treasure hunt!"
 			<br><br>The room exploded as Grandma handed Amy an old parchment map, edges crinkled and decorated with tiny sketches of the house and yard. 
 			Amy read aloud the first clue written in Grandma’s perfect handwriting: <br>“The first clue is in a place that’s always warm… like the hugs you give me.”<br>
