--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -23,10 +23,10 @@
 			<br><br>They all rushed into the living room hearth. Tucked beside a jar of cinnamon sticks on the fireplace was a small envelope. Amy opened it, but before she could read the next clue, her cousin Leo grabbed it playfully. 
 			<br><br>"Not so fast, Amy," he teased. "Let me read this one!"
 			<br><br>He unfolded the paper and read in a dramatic deep voice: <br>“Grandma always says, ‘Love is the secret ingredient.’ But where do we keep all the ingredients?”<br>
-			<br><br>“The pantry!” Sophia exclaimed, tugging Leo’s arm as they raced toward the kitchen. When they reached the pantry, they found a tin box tied with a purple ribbon. Inside was a miniature puzzle shaped like a bowl of tamale filling, each piece numbered. 
+			“The pantry!” Sophia exclaimed, tugging Leo’s arm as they raced toward the kitchen. When they reached the pantry, they found a tin box tied with a purple ribbon. Inside was a miniature puzzle shaped like a bowl of tamale filling, each piece numbered. 
 			<br><br>“Looks like we have to put this together first,” said Amy. 
 			<br><br>The group crowded around the kitchen counter. "The pieces are so tiny!" Antony complained.
-			<br><br>Laughter filled the room as they worked together to assemble the tiny puzzle. They each grabbed a few pieces, placed fitting pieces together, some even placed them up to the light to see them better squinting. 
+			<br><br>Laughter filled the room as they worked together to assemble the tiny puzzle. They each grabbed a few pieces, and placed fitting pieces together, some even placed them up to the light to see them better squinting. 
 			<br><br>When they finally finished, the picture revealed the next clue: <br>“To hear the next hint, sing me something sweet. Start with the one about Rudolph!”<br> 
 			"Grandma wants us to carol!" Leo said, beaming. The family gathered around the piano, where Aunt Maria took the lead on the keys. Everyone joined in, belting out <em>Rudolph the Red-Nosed Reindeer.</em> Grandma appeared, clapping her hands. 
 			<br><br>“Well done!” she said. “Your next clue is hidden under something from your very first Christmas together.” 
