--- a/pages/story_2.html
+++ b/pages/story_2.html
@@ -16,12 +16,12 @@
 			<br><br>McGraw is so ready for his trip, but his plans were delayed for a couple of days since his neighbors got stranded and required assistance in taking care of their pets for a bit. The sitter was not willing to do more. Feeling bad for them and loving those two gremlins, he agrees.
 			<br><br>The departure day approached, and Old McGraw was reviewing his checklist, ensuring he had everything he needed. At this point, McGraw was an expert. 
 			<br><br>"Tickets? Check. Passport? Check. Sandals and sunscreen? Double check,” he muttered to himself with a satisfied smirk. He was excited, soon he’d be soaking in the warm Bahamian sun, far away from the snow and cold he detested.
-            		<br><br>McGraw mentally pictured himself lazily lying on the beach, when outta nowhere, a loud <em>thud</em> interrupted his thoughts. He approached his window and looked over the edge of the porch to see… a reindeer, no bigger than a large dog like his neighbor’s, pawing at the snow. Its antlers were uneven, one of them chipped, and its big, sorrowful eyes locked onto his.
-            		<br><br>“What in the w-?” McGraw frowned, setting his checklist down. He walked outside, letting the door shut behind him. “Shoo! Get outta here!”
-            		<br><br>The reindeer didn’t budge. Instead, it let out a low grunt and climbed awkwardly up the porch steps. The reindeer seemed desperate and as if it had decided McGraw, was its last hope.
+			<br><br>McGraw mentally pictured himself lazily lying on the beach. But outta nowhere, a loud <em>thud</em> interrupted his thoughts. He approaches his window and looks over the edge of the porch to see…a reindeer, no bigger than a large dog like his neighbor’s, pawing at the snow. Its antlers were uneven, one of them chipped, and its big, sorrowful eyes locked onto his.
+			<br><br>“What in the w-?” McGraw frowned, setting his checklist down. He walked outside, letting the door shut behind him. “Shoo! Get outta here!”
+			<br><br>The reindeer didn’t budge. Instead, it let out a low grunt and climbed awkwardly up the porch steps. The reindeer seemed desperate and as if it had decided McGraw, was its last hope.
 			<br><br>“Oh, no you don’t. I’m not getting mixed up in whatever mess you’ve got going on,” McGraw grumbled. “I’ve got a plane to catch tomorrow. Bahamas, sunshine, no snow. You hear me?”
-			<br><br>The reindeer tilted its head, as if unimpressed by his protest. Then, it lay down on the porch with a dramatic sigh, “Bgrrr.”
-			<br><br>“Oh, for crying out loud.” McGraw rubbed his temples. “Fine. You can stay here tonight. But come morning, I’m dropping you off at the animal shelter or something.”
+			<br><br>The reindeer tilted its head, as if unimpressed by his protest. Then, it lied down on the porch with a dramatic sigh, “bgrrr.”
+			<br><br>“Oh, for crying out loud.” McGraw rubbed his temples. “Fine. You can stay here tonight. But come morning, I’m dropping you off at the animal shelter. Deal?”
 			<br><br>The reindeer blinked at him, its nose twitching, and McGraw could’ve sworn it almost smiled as if he understood (like Kristoff).
 			<br><br>The next day, as McGraw loaded his luggage into the truck, the reindeer followed after him, patting its nose against his arm.
 			<br><br>“Nope, you’re not coming with me,” McGraw said firmly.
@@ -36,11 +36,11 @@
 			<br><br>“Holy crap, FOR REAL? Oh, come on,” McGraw said. “This has got to be some kind of prank. Ain’t no way! Did John put you up to this? Is there a camera crew hiding in the bushes?”
 			<br><br>The reindeer snorted and nudged him toward the sleigh. As McGraw hesitantly stepped closer, the faint jingling sound returned, growing louder. The air shimmered, and before his eyes, the sleigh seemed to repair itself—paint gleamed, the wood straightened, and the sacks transformed into perfectly wrapped gifts.
 			<br><br>McGraw stumbled back, rubbing his eyes. “Nope. Nope, nope, nope, nope, nope, nope. Nope. Help! This isn’t happening.”
-			<br><br>But the reindeer wasn’t giving up. It grabbed McGraw’s jacket sleeve with its teeth and tugged him toward the sleigh. He directed McGraw. As soon as he sat down, the reins appeared in his hands, and the reindeer leaped to the front, joined by several others that seemed to materialize out of thin air.
+			<br><br>But the reindeer wasn’t giving up. It grabbed McGraw’s jacket sleeve with its teeth and tugged him toward the sleigh. He directed McGraw in. As soon as he sat down, the reins appeared in his hands, and the reindeer leapt to the front, joined by several others that seemed to materialize out of thin air.
 			<br><br>“What is going on?” McGraw shouted."I did not sign up for this!!!!"
 			<br><br>Suddenly, a voice echoed around him.
-			<br><br>“McGraw, you’ve been chosen,” it said. “For years, you’ve run from the cold, from the season, from the magic. But now, it’s your turn to step up. This very magic has chosen you. Tonight, you’ll take my place. Deliver the gifts, and spread the joy. And perhaps, McGraw, you’ll find something you’ve been missing. HO HO HO!” (HELPP)
-			<br><br>Before McGraw could protest, the sleigh jerked forward, the reindeer taking off into the sky. He immediately became nauseous. The height, the speed, and the experience were not one old McGraw had envisioned himself in that day, or ever... for that matter.
+			<br><br>“McGraw, you’ve been chosen,” it said. “For years, you’ve run from the cold, from the season, from the magic. But now, it’s your turn to step up. This very magic has chosen you. Tonight, you’ll take my place. Deliver the gifts, spread the joy. And perhaps, McGraw, you’ll find something you’ve been missing. HO HO HO!” (HELPP)
+			<br><br>Before McGraw could protest, the sleigh jerked forward, the reindeer taking off into the sky. He immediately became nauseous. The height, the speed, and the experience was not one old McGraw had envisioned himself in that day, or ever... for that matter.
 			<br><br>The first stop on McGraw’s route was tucked at the edge of the forest, small and humble. Snow piled high on the roof, and the glow of a single candle flickered in the window. McGraw guided the sleigh down, landing gently in the clearing.
 			<br><br>When McGraw slid down the chimney (the magic made it surprisingly easy), he landed in a cozy living room where a young boy sat by the fireplace, clutching a worn teddy bear.
 			<br><br>The boy’s eyes widened when he saw McGraw. “Santa?” he whispered.
@@ -48,10 +48,13 @@
 			<br><br>The boy nodded eagerly. “I tried! I even helped Mom bake cookies!”
 			<br><br>McGraw chuckled. “Well, that deserves something special.” He reached into the sack and pulled out a shiny red fire truck, placing it gently in the boy’s hands.
 			<br><br>The boy's eyes sparkled. “Thank you, Santa!”
-			<br><br>McGraw tousled the boy’s hair, then whispered, “Merry Christmas,” before climbing back up the chimney. McGraw felt a warmth and satisfaction never felt before. He had just made a little boy's day so much more special. He was now more motivated than ever. And so on he went, going door to door, hiving presents to the well behaved kids. 
+			<br><br>McGraw tousled the boy’s hair, then whispered, “Merry Christmas,” before climbing back up the chimney. McGraw felt a warmth and satisfaction never felt before. He had just made a little boys day so much more special. He was now more motivated than ever. And so on he went, going door to door, hiving presents to the well behaved kids. 
 			<br><br>Once McGraw was done, he went home. He walked up the porch and smiled. There in that very spot is where the reindeer, that changed his plans, had appeared.
-			<br><br>“Merry Christmas,” he whispered, more to himself than anyone else.
+		   <br><br>“Merry Christmas,” he whispered, more to himself than anyone else.
 		</p>
 	</div>
+	<div>
+	   <a href="https://rubyscarf.github.io/foryou/adventcalendar.html">Go back</a>
+	 </div>
 </body>
 </html>
