--- a/pages/story_3.html
+++ b/pages/story_3.html
@@ -26,7 +26,7 @@
 			“The pantry!” Sophia exclaimed, tugging Leo’s arm as they raced toward the kitchen. When they reached the pantry, they found a tin box tied with a purple ribbon. Inside was a miniature puzzle shaped like a bowl of tamale filling, each piece numbered. 
 			<br><br>“Looks like we have to put this together first,” said Amy. 
 			<br><br>The group crowded around the kitchen counter. "The pieces are so tiny!" Antony complained.
-			<br><br>Laughter filled the room as they worked together to assemble the tiny puzzle. They each grabbed a few pieces, and placed fitting pieces together, some even placed them up to the light to see them better squinting. 
+			<br><br>Laughter filled the room as they worked together to assemble the tiny puzzle. They each grabbed a few pieces and placed fitting pieces together, some even placed them up to the light to see them better squinting. 
 			<br><br>When they finally finished, the picture revealed the next clue: <br>“To hear the next hint, sing me something sweet. Start with the one about Rudolph!”<br> 
 			"Grandma wants us to carol!" Leo said, beaming. The family gathered around the piano, where Aunt Maria took the lead on the keys. Everyone joined in, belting out <em>Rudolph the Red-Nosed Reindeer.</em> Grandma appeared, clapping her hands. 
 			<br><br>“Well done!” she said. “Your next clue is hidden under something from your very first Christmas together.” 
@@ -39,5 +39,8 @@
 			<br><br>They all laughed. As the family gathered around to help Amy prepare the dish, the air was filled with the clinking of pans, bursts of laughter, and the warmth of togetherness. Amy realized that while the recipe was special, the treasure wasn’t just in the dish, it was in the memories they’d made along the way.
         </p>
     </div>
+	<div>
+		<a href="https://rubyscarf.github.io/foryou/adventcalendar.html">Go Back</a>
+	</div>
 </body>
 </html>
