--- a/pages/story_1.html
+++ b/pages/story_1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="shortcut icon" type="image/png" href="" />
+	<link rel="shortcut icon" type="image/png" href="https://www.iconpacks.net/icons/2/free-opened-book-icon-3169-thumb.png" />
 	<title>Story #1</title>
 	<link rel="stylesheet" href="story.css">
 </head>
