--- a/gift/gift.html
+++ b/gift/gift.html
@@ -24,6 +24,11 @@
           <img src="Drawing4Mate.png" alt="Image" style="max-width: 100%; height: auto;">
         </div>
         <div>
+            <p>
+                *insert text here*
+            </p>
+        </div>
+        <div>
             <a href="https://rubyscarf.github.io/foryou/index.html" style="color:#446478; font-family: arial; font-size:20px; text-align: right"> Go back </a>
         </div>
 </body>
