--- a/gift/gift.html
+++ b/gift/gift.html
@@ -32,7 +32,7 @@
                         with you. I've never made a fully blown html code made for people to return to. I took ONE coding class and even then 
                         I was not great at coding. But I REALLY wanted to do something cool. I spent all of November figuring this out; first: what 
                         I wanted to do; second: how to do it; third: customize it and make it cool. I did not code the entirety from scratch, I 
-                        looked these things up. Then more and more ideas came up. I was only going to do one page, this one, Day 25. Then I got 
+                        looked these templates up then added all the content myself. More and more ideas came up. I was only going to do one page, this one, Day 25. Then I got 
                         the idea to make a whole advent calendar. By that time, I had 1.5 weeks to finish it. But I was committed, I wanted to do 
                         it so bad because I thought it would be cool. Here we are. I sent it, it worked? -I think. <br>
                             To be honest, I did not know what to gift you at all. I did not know what to put in this page. I drew the image above 
