--- a/gift/gift.html
+++ b/gift/gift.html
@@ -35,7 +35,7 @@
                         I wanted to do; second: how to do it; third: customize it and make it cool. I did not code the entirety from scratch, I 
                         looked these templates up then added all the content myself. More and more ideas came up. I was only going to do one page, this one, Day 25. Then I got 
                         the idea to make a whole advent calendar. By that time, I had 1.5 weeks to finish it. But I was committed, I wanted to do 
-                        it so bad because I thought it would be cool. Here we are. I sent it, it worked? -I think. <br>
+                        it so bad because I thought it would be cool. Here we are. I sent it, it worked? -I think. I literally already sent it abd im STILL adding minor things.<br>
                             To be honest, I did not know what to gift you at all. I did not know what to put in this page. I drew the image above 
                             on the first week I planned to do any of this, but it didn't feel like enough. I tried searching up what I could do, 
                             but most were domestic things. I felt like stuck. But idk, i figured writing something would be the best I could do.
