--- a/gift/gift.html
+++ b/gift/gift.html
@@ -27,10 +27,30 @@
         <div>
             <p>
                 Beautiful, <br><br>
-Hi, tis Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, is not very well celebrated, and is not even a national holiday. Heck, it just says people eat KFC on this day so it is like National KFC Day or smth? idek :D. But for me, Christmas is the coolest, most joyful, and fun holiday, and I wanted to share that with you. I've never made a fully blown HTML code for people to return to. I took ONE coding class and even then, I was not great at coding. But I REALLY wanted to do something cool. I spent all of November figuring this out; first: what wanted to do; second: how to do it; third: customize it and make it cool. I did not code the entirety from scratch, I looked these templates up and then added all the content myself. More and more ideas came up. I was only going to do one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I had 1.5 weeks to finish it. But I was committed, I wanted to do it so bad because I thought it would be cool. Here we are. I sent it, and it worked? -I think. I literally already sent it and I'm STILL adding minor things.<br><br>
-To be honest, I did not know what to gift you at all. I did not know what to put in this page. I drew the image above on the first week I planned to do any of this, but it didn't feel like enough. I tried searching up what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would be the best I could do. Tell you my thought process on this entire thing. I mean I learned quite some stuff. Whether I'll use it in the future    is a different question but 'oh well!' <br><br>
-Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. 
-<br><br>You deserve the whole world. I cannot give it to you, but I sure wanna be on the ride with you. 
+Hi, tis Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
+celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
+KFC Day or smth? idek :D. But for me, Christmas is the most meaningful, most magical, joyful, and fun holiday; I
+wanted to share that with you. <br><br>
+I've never made a full-blown HTML code for people to return to. Not like this. I took 
+ONE coding class and even then, I was not great at coding. But I <strong><em>REALLY</em></strong> wanted to do something 
+cool. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
+customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
+so bland so I made it look nicer and added all the content myself. More and more ideas came up. I was only going to do 
+one page, this one, Day 25. Then I got the idea to make a whole advent calendar. By that time, I had 2 weeks to finish it. 
+But I was committed, I wanted to do it so bad because I thought it would be cool and to me, you're so worth it. Now here 
+we are. I sent it, and it worked? -I think. I literally already sent it and I'm STILL adding minor things. I just want it 
+to be incredible (ideally perfect but I ain't got a clue how to do that).<br><br>
+To be honest, I did not know what to gift you at all. That's why I asked you. I did not know what to put in this page. 
+I drew the image above on the first week I planned to do any of this, but it didn't feel like it was enough. I tried 
+searching for what I could do, but most were domestic things. I felt stuck. But idk, I figured writing something would 
+be the best I could do. Tell you my thought process on this entire thing. I mean I learned quite some stuff. Whether I'll 
+use it in the future is a different question but 'oh well!' It was fun, because it was for you. <br><br>
+Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life. This Christmas season, I've made it my 
+goal to make your experience superb. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
+I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. idk if it's 
+wrong to bring in God to this, but I pray He is always watching and protecting you. <br><br> 
+You mean the world to me Yuri. <br>
+You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
             </p>
         </div>
         <div>
