--- a/gift/gift.html
+++ b/gift/gift.html
@@ -29,8 +29,8 @@
                 Beautiful, <br><br>
 Hi, t'is Christmas Day! You made it! Google said that in Japan, Christmas isn't really a big thing, it's not very well 
 celebrated, and it's not even a national holiday. Heck, it just says people eat KFC on this day so it is like the National 
-KFC Day or smth? idek :D. But for me, Christmas is the most meaningful, most magical, joyful, and fun holiday; I
-wanted to share that with you. <br><br>
+KFC Day or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
+holiday to me; I wanted to share that with you. <br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took 
 ONE coding class and even then, I was not great at coding. But I <strong><em>REALLY</em></strong> wanted to do something 
 cool. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
