--- a/gift/gift.html
+++ b/gift/gift.html
@@ -49,8 +49,11 @@ Anywho, I'm just entirely happy, filled with joy, ecstatic having you in my life
 goal to make your experience superb. Idk how I'll ever match up to this again. Will I need to learn JavaScript next? LOL!
 I truly hope you enjoyed this whole thing. I hope you had fun with the puzzles, the videos, and the stories. idk if it's 
 wrong to bring in God to this, but I pray He is always watching and protecting you. <br><br> 
-You mean the world to me Yuri. <br>
+You mean so much to me Yuri. <br>
 You deserve the whole world. I don't quite think I can give it to you, but I sure wanna ride along with you. 
+            </p>
+            <p style="text-align: right"> 
+                Always wishing you the Best, <br> Susan Gonzalez
             </p>
         </div>
         <div>
