--- a/gift/gift.html
+++ b/gift/gift.html
@@ -32,7 +32,7 @@ celebrated, and it's not even a national holiday. Heck, it just says people eat 
 KFC Day or smth? idek :D. But Christmas is my favorite holiday. It's the most meaningful, most magical, joyful, and fun 
 holiday to me; I wanted to share that with you. <br><br>
 I've never made a full-blown HTML code for people to return to. Not like this. I took 
-ONE coding class and even then, I was not great at coding. But I <strong><em>REALLY</em></strong> wanted to do something 
+ONE coding class 2 years ago and even then, I was not great at coding. But I <strong>REALLY</strong> wanted to do something 
 cool. I spent all of November figuring this out; first: what I wanted to do; second: how I was going to make it; third: 
 customize it and make it amazing. I did not quite code the entirety from scratch, I looked these templates up, they were 
 so bland so I made it look nicer and added all the content myself. More and more ideas came up. I was only going to do 
